changed to rainbow kit

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Eth App",
-  "name": "Create Eth App Sample",
+  "short_name": "RainbowKit App",
+  "name": "RainbowKit App Example",
   "icons": [
     {
       "src": "favicon.ico",
