--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "dependencies": {
     "@rainbow-me/rainbowkit": "workspace:*",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
-    "ethers": "^5.0.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "ethers": "^5.7.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.4.1",
+    "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "typescript": "^4.7.2",
     "util": "0.12.4",
     "wagmi": "^0.6.6",
@@ -21,7 +26,7 @@
   },
   "scripts": {
     "dev": "npm run start",
-    "start": "PORT=3030 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!@rainbow-me)/\"",
     "eject": "react-scripts eject"
@@ -43,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
